--- a/app/src/main/res/drawable/bg_key_button.xml
+++ b/app/src/main/res/drawable/bg_key_button.xml
@@ -4,7 +4,8 @@
     android:insetTop="2dp"
     android:insetRight="2dp"
     android:insetBottom="2dp">
-    <shape android:shape="oval">
+    <shape android:shape="rectangle">
         <solid android:color="?attr/colorSurfaceVariant" />
+        <corners android:radius="8dp" />
     </shape>
 </inset>
