--- a/app/src/main/res/layout/keyboard_view.xml
+++ b/app/src/main/res/layout/keyboard_view.xml
@@ -235,6 +235,26 @@
             app:layout_constraintTop_toTopOf="parent"
             android:tint="?attr/colorOnSurfaceVariant" />
 
+        <!-- 切换到字母键盘按钮（ABC） -->
+        <TextView
+            android:id="@+id/btnLetters"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="6dp"
+            android:background="@drawable/bg_key_button"
+            android:contentDescription="@string/cd_letters_keyboard"
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:stateListAnimator="@animator/key_button_state_list"
+            android:text="@string/label_abc"
+            android:textColor="?attr/colorOnSurfaceVariant"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnEnter"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageButton
             android:id="@+id/btnAiEdit"
             android:layout_width="40dp"
@@ -248,7 +268,7 @@
             android:src="@drawable/ic_edit"
             android:stateListAnimator="@animator/key_button_state_list"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btnEnter"
+            app:layout_constraintEnd_toStartOf="@id/btnLetters"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@id/btnImeSwitcher"
             app:layout_constraintTop_toTopOf="parent"
