--- a/app/src/main/res/drawable/bg_key_button.xml
+++ b/app/src/main/res/drawable/bg_key_button.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetLeft="2dp"
-    android:insetTop="2dp"
-    android:insetRight="2dp"
-    android:insetBottom="2dp">
-    <shape android:shape="rectangle">
-        <solid android:color="?attr/colorSurfaceVariant" />
-        <corners android:radius="8dp" />
-    </shape>
-</inset>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 按压状态 - 颜色变深 -->
+    <item android:state_pressed="true">
+        <inset
+            android:insetLeft="2dp"
+            android:insetTop="2dp"
+            android:insetRight="2dp"
+            android:insetBottom="2dp">
+            <shape android:shape="rectangle">
+                <solid android:color="?attr/colorSecondaryContainer" />
+                <corners android:radius="8dp" />
+            </shape>
+        </inset>
+    </item>
+
+    <!-- 默认状态 -->
+    <item>
+        <inset
+            android:insetLeft="2dp"
+            android:insetTop="2dp"
+            android:insetRight="2dp"
+            android:insetBottom="2dp">
+            <shape android:shape="rectangle">
+                <solid android:color="?attr/colorSurfaceVariant" />
+                <corners android:radius="8dp" />
+            </shape>
+        </inset>
+    </item>
+</selector>
