--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -132,6 +132,13 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/label_mic_haptic" />
 
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/switchQwertyHaptic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/label_qwerty_haptic" />
+
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
