--- a/app/src/main/res/layout/keyboard_qwerty_view.xml
+++ b/app/src/main/res/layout/keyboard_qwerty_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/ime_panel_height"
     android:orientation="vertical"
     android:background="@drawable/bg_keyboard_container"
     android:paddingHorizontal="12dp"
