feat(ime): 更新输入法子类型标签为应用名称

--- a/app/src/main/res/xml/method.xml
+++ b/app/src/main/res/xml/method.xml
@@ -3,7 +3,7 @@
     android:settingsActivity="com.brycewg.asrkb.ui.SettingsActivity">
 
     <subtype
-        android:label="@string/subtype_generic"
+        android:label="@string/app_name"
         android:imeSubtypeLocale="zh_CN"
         android:imeSubtypeMode="keyboard" />
 
